manifest/network/routes/admin/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lil-admin-httproute
  namespace: lil-admin
spec:
  parentRefs:
  - name: default-gateway
    kind: Gateway
    namespace: lil-network
  hostnames:
  - admin.lilamaris.kr
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kubernetes-dashboard-kong-proxy
      namespace: lil-dashboard
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /monitor
    backendRefs:
    - name: prometheus-grafana
      namespace: lil-monitor
      port: 80

---

# ReferenceGrant by lil-monitor
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: reference-grant-from-lil-dashboard-to-lil-admin
  namespace: lil-monitor
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: lil-admin
  to:
  - group: ""
    kind: Service

---

# ReferenceGrant by lil-dashboard
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: reference-grant-from-lil-dashboard-to-lil-admin
  namespace: lil-dashboard
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: lil-admin
  to:
  - group: ""
    kind: Service

---
